--- a/README
+++ b/README
@@ -2,9 +2,10 @@ NAME
     SHARYANTO::Proc::Util - OS-process-related routines
 
 VERSION
-    version 0.57
+    version 0.58
 
 SYNOPSIS
+DESCRIPTION
 FUNCTIONS
     None are exported by default, but they are exportable.
 
@@ -22,9 +23,26 @@ FUNCTIONS
     None are exported by default, but they are exportable.
 
 SEE ALSO
+    SHARYANTO
+
     Proc::ProcessTable. Pros: does not depend on pstree command, process
     names not truncated by pstree. Cons: a little bit more heavyweight (uses
     File::Spec, Cwd, File::Find).
+
+HOMEPAGE
+    Please visit the project's homepage at
+    <https://metacpan.org/release/SHARYANTO-Proc-Util>.
+
+SOURCE
+    Source repository is at
+    <https://github.com/sharyanto/perl-SHARYANTO-Proc-Util>.
+
+BUGS
+    Please report any bugs or feature requests on the bugtracker website
+    <https://rt.cpan.org/Public/Dist/Display.html?Name=SHARYANTO-Proc-Util>
+
+    When submitting a bug or request, please include a test-file or a patch
+    to an existing test-file that illustrates the bug or desired feature.
 
 AUTHOR
     Steven Haryanto <stevenharyanto@gmail.com>
@@ -35,4 +53,3 @@ COPYRIGHT AND LICENSE
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
 
-DESCRIPTION
