--- a/README
+++ b/README
@@ -2,14 +2,13 @@ NAME
     SHARYANTO::Proc::Util - OS-process-related routines
 
 VERSION
-    version 0.58
+    version 0.59
 
 SYNOPSIS
-DESCRIPTION
 FUNCTIONS
     None are exported by default, but they are exportable.
 
-  get_parent_processes($pid) => ARRAY
+  get_parent_processes($pid[, \%opts]) => ARRAY
     Return an array containing information about parent processes of $pid up
     to the parent of all processes (usually "init"). If $pid is not
     mentioned, it defaults to $$. The immediate parent is in the first
@@ -20,7 +19,13 @@ FUNCTIONS
     Currently retrieves information by calling pstree program. Return undef
     on failure.
 
-    None are exported by default, but they are exportable.
+    Known options:
+
+    *   method => STR (default: "proctable")
+
+        Either "proctable" (the default, which means to use
+        Proc::ProcessTable) or "pstree" (which uses the pstree command,
+        which might not be portable between Unices).
 
 SEE ALSO
     SHARYANTO
@@ -48,7 +53,7 @@ AUTHOR
     Steven Haryanto <stevenharyanto@gmail.com>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2013 by Steven Haryanto.
+    This software is copyright (c) 2014 by Steven Haryanto.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
