Import of SHARYANTO/SHARYANTO-Proc-Util-0.60 from CPAN.
gitpan-cpan-distribution: SHARYANTO-Proc-Util
gitpan-cpan-version:      0.60
gitpan-cpan-path:         SHARYANTO/SHARYANTO-Proc-Util-0.60.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for SHARYANTO-Proc-Util
 
+0.60    2014-04-10 (SHARYANTO)
+
+        - Trap failure in loading Proc::ProcessTable so this module can still be
+          used without it.
+
+
 0.59    2013-11-11 (SHARYANTO)
 
         - Use Proc::ProcessTable by default instead of 'pstree' command
