Import of SHARYANTO/SHARYANTO-Proc-Util-0.61 from CPAN.
gitpan-cpan-distribution: SHARYANTO-Proc-Util
gitpan-cpan-version:      0.61
gitpan-cpan-path:         SHARYANTO/SHARYANTO-Proc-Util-0.61.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for SHARYANTO-Proc-Util
 
+0.61    2014-04-14 (SHARYANTO)
+
+        - Skip test if get_parent_processes() returns undef [CT].
+
+
 0.60    2014-04-10 (SHARYANTO)
 
         - Trap failure in loading Proc::ProcessTable so this module can still be
